# web/src/lib/api/openapi.json
@@ -4761,12 +4761,11 @@
             "title": "Record",
             "type": "object"
           },
-          "related_issue_ids": {
+          "related_issues": {
             "items": {
-              "format": "uuid",
-              "type": "string"
+              "$ref": "#/components/schemas/IssueOut"
             },
-            "title": "Related Issue Ids",
+            "title": "Related Issues",
             "type": "array"
           },
           "run_id": {
@@ -4805,7 +4804,7 @@
           "data",
           "source_row",
           "source_header",
-          "related_issue_ids"
+          "related_issues"
         ],
         "title": "RecordOut",
         "type": "object"
